err/transwarp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/transwarp'...
Compiling './lib/python3.5/site-packages/transwarp/i18n.py'...
***   File "./lib/python3.5/site-packages/transwarp/i18n.py", line 41
    key = line[:pos].strip().replace(ur'\=', u'=')
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/transwarp/urlfetch.py'...
***   File "./lib/python3.5/site-packages/transwarp/urlfetch.py", line 90
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/transwarp/web.py'...
***   File "./lib/python3.5/site-packages/transwarp/web.py", line 1425
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/transwarp-1.0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
